# resin

./: .gitignore  CLAUDE.md  Cargo.toml  DECOMPOSITION-AUDIT.md  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-docs.yml
.moss/: complexity-allow  index.sqlite
.normalize/: complexity-allow  config.toml
crates/resin-audio/: Cargo.toml  build.rs
crates/resin-audio/benches/: effects.rs
crates/resin-audio/src/: codegen.rs  effects.rs  envelope.rs  filter.rs  granular.rs  graph.rs  jit.rs  jit_impl.rs  lib.rs  midi.rs  optimize.rs  osc.rs  patch.rs  pattern.rs  percussion.rs  physical.rs  primitive.rs  room.rs  spatial.rs  spectral.rs  vocoder.rs  wav.rs
crates/resin-automata/: Cargo.toml
crates/resin-automata/src/: lib.rs
crates/resin-backend/: Cargo.toml
crates/resin-backend/src/: backend.rs  cpu.rs  error.rs  lib.rs  policy.rs  registry.rs  scheduler.rs
crates/resin-colonization/: Cargo.toml
crates/resin-color/: Cargo.toml
crates/resin-color/src/: lib.rs
crates/resin-core/: Cargo.toml
crates/resin-core/src/: attributes.rs  automata.rs  error.rs  expr.rs  field.rs  graph.rs  image_field.rs  lib.rs  lsystem.rs  node.rs  noise.rs  reaction_diffusion.rs  space_colonization.rs  value.rs
crates/resin-crossdomain/: Cargo.toml
crates/resin-crossdomain/src/: lib.rs
crates/resin-easing/: Cargo.toml
crates/resin-expr/: Cargo.toml
crates/resin-expr-field/: Cargo.toml
crates/resin-expr-field/benches/: field_expr_bench.rs
crates/resin-expr-field/src/: jit_impl.rs  lib.rs
crates/resin-expr-std/: Cargo.toml
crates/resin-field/: Cargo.toml
crates/resin-field/benches/: field_benches.rs
crates/resin-field/src/: context.rs  lib.rs
crates/resin-fluid/: Cargo.toml
crates/resin-fluid/src/: lib.rs
crates/resin-gltf/: Cargo.toml
crates/resin-gpu/: Cargo.toml
crates/resin-gpu/src/: backend.rs  context.rs  error.rs  image_expr.rs  lib.rs  noise.rs  texture.rs
crates/resin-image/: Cargo.toml
crates/resin-image/src/: lib.rs
crates/resin-jit/: Cargo.toml
crates/resin-lsystem/: Cargo.toml
crates/resin-lsystem/src/: lib.rs
crates/resin-macros/: Cargo.toml
crates/resin-mesh/: Cargo.toml
crates/resin-mesh/benches/: mesh_benches.rs
crates/resin-mesh/src/: ao.rs  architecture.rs  bevel.rs  boolean.rs  curvature.rs  curve_mesh.rs  decimate.rs  geodesic.rs  halfedge.rs  lattice.rs  lib.rs  lod.rs  loft.rs  loops.rs  marching_cubes.rs  mesh.rs  navmesh.rs  obj.rs  ops.rs  primitives.rs  remesh.rs  repair.rs  sdf.rs  subdivision.rs  terrain.rs  topology.rs  uv.rs  weights.rs
crates/resin-motion/: Cargo.toml
crates/resin-motion-fn/: Cargo.toml
crates/resin-motion-fn/src/: lib.rs
crates/resin-motion/src/: lib.rs
crates/resin-noise/: Cargo.toml
crates/resin-noise/benches/: noise_benches.rs
crates/resin-noise/src/: lib.rs
crates/resin-op/: Cargo.toml
crates/resin-op-macros/: Cargo.toml
crates/resin-op/src/: lib.rs
crates/resin-particle/: Cargo.toml
crates/resin-particle/src/: lib.rs
crates/resin-physics/: Cargo.toml
crates/resin-physics/benches/: physics_benches.rs
crates/resin-physics/src/: cloth.rs  lib.rs  softbody.rs
crates/resin-pointcloud/: Cargo.toml
crates/resin-pointcloud/benches/: pointcloud_benches.rs
crates/resin-pointcloud/src/: lib.rs
crates/resin-procgen/: Cargo.toml
crates/resin-procgen/src/: lib.rs  maze.rs  network.rs
crates/resin-rd/: Cargo.toml
crates/resin-rig/: Cargo.toml
crates/resin-rig/src/: animation.rs  blend.rs  constraint.rs  ik.rs  lib.rs  locomotion.rs  motion_matching.rs  path3d.rs  secondary.rs  skeleton.rs  skin.rs  transform.rs
crates/resin-scatter/: Cargo.toml
crates/resin-scatter/src/: lib.rs
crates/resin-space-colonization/: Cargo.toml
crates/resin-spatial/: Cargo.toml
crates/resin-spatial/benches/: spatial_benches.rs
crates/resin-spatial/src/: lib.rs
crates/resin-spectral/: Cargo.toml
crates/resin-spline/: Cargo.toml
crates/resin-spring/: Cargo.toml
crates/resin-spring/src/: lib.rs
crates/resin-surface/: Cargo.toml
crates/resin-transform/: Cargo.toml
crates/resin-vector/: Cargo.toml
crates/resin-vector/src/: bezier.rs  boolean.rs  curve_impl.rs  delaunay.rs  geometry.rs  gradient_mesh.rs  hatching.rs  lib.rs  network.rs  path.rs  rasterize.rs  stroke.rs  svg.rs  text.rs
crates/resin-voxel/: Cargo.toml
crates/resin-voxel/src/: lib.rs
crates/resin-wfc/: Cargo.toml
crates/unshape-audio/: Cargo.toml  build.rs
crates/unshape-audio-codegen/: Cargo.toml
crates/unshape-audio/benches/: effects.rs
crates/unshape-audio/src/: codegen.rs  effects.rs  granular.rs  graph.rs  jit_impl.rs  lib.rs  midi.rs  optimize.rs  osc.rs  pattern.rs  percussion.rs  physical.rs  primitive.rs  room.rs  spatial.rs  spectral.rs  vocoder.rs  wav.rs
crates/unshape-automata/: Cargo.toml
crates/unshape-backend/: Cargo.toml
crates/unshape-bytes/: Cargo.toml
crates/unshape-color/: Cargo.toml
crates/unshape-core/: Cargo.toml
crates/unshape-crossdomain/: Cargo.toml
crates/unshape-curve/: Cargo.toml
crates/unshape-easing/: Cargo.toml
crates/unshape-expr-field/: Cargo.toml
crates/unshape-field/: Cargo.toml
crates/unshape-fluid/: Cargo.toml
crates/unshape-geometry/: Cargo.toml
crates/unshape-gltf/: Cargo.toml
crates/unshape-gpu/: Cargo.toml
crates/unshape-history/: Cargo.toml
crates/unshape-image/: Cargo.toml
crates/unshape-jit/: Cargo.toml
crates/unshape-lsystem/: Cargo.toml
crates/unshape-macros/: Cargo.toml
crates/unshape-mesh/: Cargo.toml
crates/unshape-motion-fn/: Cargo.toml
docs/: architecture-review.md  architecture.md  conventions.md  cross-domain-analysis.md  domain-differences.md  features.md  file-formats.md  getting-started.md  introduction.md  open-questions.md  ops-index.md  ops-reference.md  philosophy.md  prior-art.md
examples/: audio_synthesis.rs  bevy_animation_demo.rs  bevy_mesh_demo.rs  compute_backends.rs  noise_texture.rs  pipeline_roundtrip.rs  procgen_lsystem.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: midi_note.rs  obj_import.rs  svg_path.rs  wav_parse.rs
(+234 files in other folders)
