[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pterror/resin"

[workspace.dependencies]
# Math (bevy-compatible)
glam = "0.29"

# Error handling
thiserror = "2"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Float ordering for priority queues
ordered-float = "4"

# Random number generation
rand = "0.9"

# Proc macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Bevy (for examples) - no audio features to avoid ALSA dependency
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "x11",
    "tonemapping_luts",
] }

# Resin crates
rhizome-resin-core = { path = "crates/resin-core" }
rhizome-resin-mesh = { path = "crates/resin-mesh" }
rhizome-resin-audio = { path = "crates/resin-audio" }
rhizome-resin-vector = { path = "crates/resin-vector" }
rhizome-resin-rig = { path = "crates/resin-rig" }
rhizome-resin-gltf = { path = "crates/resin-gltf" }
rhizome-resin-fluid = { path = "crates/resin-fluid" }

[package]
name = "rhizome-resin-examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bevy = { workspace = true }
rhizome-resin-core = { workspace = true }
rhizome-resin-mesh = { workspace = true }
rhizome-resin-audio = { workspace = true }
rhizome-resin-vector = { workspace = true }
rhizome-resin-rig = { workspace = true }
glam = { workspace = true }

[[example]]
name = "bevy_mesh_demo"
path = "examples/bevy_mesh_demo.rs"

[[example]]
name = "bevy_animation_demo"
path = "examples/bevy_animation_demo.rs"
