[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pterror/resin"

[workspace.dependencies]
# Math (bevy-compatible)
glam = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Float ordering for priority queues
ordered-float = "4"

# Random number generation
rand = "0.9"

# Proc macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Benchmarking
criterion = "0.5"

# FFT for spectral analysis
rustfft = "6"

# JIT compilation (optional)
cranelift = { package = "cranelift-codegen", version = "0.113" }
cranelift-frontend = "0.113"
cranelift-native = "0.113"
cranelift-module = "0.113"
cranelift-jit = "0.113"

# Bevy (for examples) - no audio features to avoid ALSA dependency
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "x11",
    "tonemapping_luts",
] }

# Resin crates
rhizome-resin-core = { path = "crates/resin-core" }
rhizome-resin-backend = { path = "crates/resin-backend" }
rhizome-resin-mesh = { path = "crates/resin-mesh" }
rhizome-resin-audio = { path = "crates/resin-audio" }
rhizome-resin-vector = { path = "crates/resin-vector" }
rhizome-resin-rig = { path = "crates/resin-rig" }
rhizome-resin-gltf = { path = "crates/resin-gltf" }
rhizome-resin-fluid = { path = "crates/resin-fluid" }
rhizome-resin-physics = { path = "crates/resin-physics" }
rhizome-resin-noise = { path = "crates/resin-noise" }
rhizome-resin-field = { path = "crates/resin-field" }
rhizome-resin-image = { path = "crates/resin-image" }
rhizome-resin-lsystem = { path = "crates/resin-lsystem" }
rhizome-resin-op = { path = "crates/resin-op" }
rhizome-resin-op-macros = { path = "crates/resin-op-macros" }
rhizome-resin-motion-fn = { path = "crates/resin-motion-fn" }
rhizome-resin-curve = { path = "crates/resin-curve" }
rhizome-resin-audio-codegen = { path = "crates/resin-audio-codegen" }
rhizome-resin-jit = { path = "crates/resin-jit" }
rhizome-resin-gpu = { path = "crates/resin-gpu" }
rhizome-resin-spectral = { path = "crates/resin-spectral" }

[package]
name = "rhizome-resin-examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
dynop = [
    "rhizome-resin-mesh/dynop",
    "rhizome-resin-audio/dynop",
    "dep:rhizome-resin-op",
    "dep:serde_json",
]

[dependencies]
bevy = { workspace = true }
rhizome-resin-core = { workspace = true }
rhizome-resin-backend = { workspace = true }
rhizome-resin-mesh = { workspace = true }
rhizome-resin-audio = { workspace = true }
rhizome-resin-vector = { workspace = true }
rhizome-resin-rig = { workspace = true }
rhizome-resin-noise = { workspace = true }
rhizome-resin-field = { workspace = true }
rhizome-resin-image = { workspace = true }
rhizome-resin-lsystem = { workspace = true }
rhizome-resin-op = { workspace = true, optional = true }
glam = { workspace = true }
serde_json = { version = "1", optional = true }

[[example]]
name = "bevy_mesh_demo"
path = "examples/bevy_mesh_demo.rs"

[[example]]
name = "bevy_animation_demo"
path = "examples/bevy_animation_demo.rs"

[[example]]
name = "audio_synthesis"
path = "examples/audio_synthesis.rs"

[[example]]
name = "procgen_lsystem"
path = "examples/procgen_lsystem.rs"

[[example]]
name = "noise_texture"
path = "examples/noise_texture.rs"

[[example]]
name = "pipeline_roundtrip"
path = "examples/pipeline_roundtrip.rs"
required-features = ["dynop"]

[[example]]
name = "compute_backends"
path = "examples/compute_backends.rs"
