[workspace]
resolver = "3"
members = ["crates/*", "tools/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/unshape"

[workspace.dependencies]
# Math (bevy-compatible)
glam = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Float ordering for priority queues
ordered-float = "4"

# Random number generation
rand = "0.9"

# Proc macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Benchmarking
criterion = "0.5"

# FFT for spectral analysis
rustfft = "6"

# JIT compilation (optional)
cranelift = { package = "cranelift-codegen", version = "0.113" }
cranelift-frontend = "0.113"
cranelift-native = "0.113"
cranelift-module = "0.113"
cranelift-jit = "0.113"

# Bevy (for examples) - no audio features to avoid ALSA dependency
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "x11",
    "tonemapping_luts",
] }

# Unshape crates
unshape-core = { path = "crates/unshape-core" }
unshape-backend = { path = "crates/unshape-backend" }
unshape-mesh = { path = "crates/unshape-mesh" }
unshape-audio = { path = "crates/unshape-audio" }
unshape-vector = { path = "crates/unshape-vector" }
unshape-rig = { path = "crates/unshape-rig" }
unshape-gltf = { path = "crates/unshape-gltf" }
unshape-fluid = { path = "crates/unshape-fluid" }
unshape-physics = { path = "crates/unshape-physics" }
unshape-noise = { path = "crates/unshape-noise" }
unshape-field = { path = "crates/unshape-field" }
unshape-image = { path = "crates/unshape-image" }
unshape-lsystem = { path = "crates/unshape-lsystem" }
unshape-op = { path = "crates/unshape-op" }
unshape-op-macros = { path = "crates/unshape-op-macros" }
unshape-motion-fn = { path = "crates/unshape-motion-fn" }
unshape-curve = { path = "crates/unshape-curve" }
unshape-audio-codegen = { path = "crates/unshape-audio-codegen" }
unshape-jit = { path = "crates/unshape-jit" }
unshape-gpu = { path = "crates/unshape-gpu" }
unshape-spectral = { path = "crates/unshape-spectral" }

[package]
name = "unshape-examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
dynop = [
    "unshape-mesh/dynop",
    "unshape-audio/dynop",
    "dep:unshape-op",
    "dep:serde_json",
]

[dependencies]
bevy = { workspace = true }
unshape-core = { workspace = true }
unshape-backend = { workspace = true }
unshape-mesh = { workspace = true }
unshape-audio = { workspace = true }
unshape-vector = { workspace = true }
unshape-rig = { workspace = true }
unshape-noise = { workspace = true }
unshape-field = { workspace = true }
unshape-image = { workspace = true }
unshape-lsystem = { workspace = true }
unshape-op = { workspace = true, optional = true }
glam = { workspace = true }
serde_json = { version = "1", optional = true }

[[example]]
name = "bevy_mesh_demo"
path = "examples/bevy_mesh_demo.rs"

[[example]]
name = "bevy_animation_demo"
path = "examples/bevy_animation_demo.rs"

[[example]]
name = "audio_synthesis"
path = "examples/audio_synthesis.rs"

[[example]]
name = "procgen_lsystem"
path = "examples/procgen_lsystem.rs"

[[example]]
name = "noise_texture"
path = "examples/noise_texture.rs"

[[example]]
name = "pipeline_roundtrip"
path = "examples/pipeline_roundtrip.rs"
required-features = ["dynop"]

[[example]]
name = "compute_backends"
path = "examples/compute_backends.rs"
