[package]
name = "rhizome-resin-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio synthesis for resin"

[features]
default = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
rhizome-resin-core = { path = "../resin-core" }
serde = { workspace = true, optional = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "effects"
harness = false
