[package]
name = "rhizome-resin-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio synthesis for resin"

[features]
default = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]
# Graph pattern matching and optimization
optimize = []
# Experimental: JIT compilation for audio graphs
cranelift = ["dep:cranelift", "dep:cranelift-frontend", "dep:cranelift-native", "dep:cranelift-module", "dep:cranelift-jit"]
# Build-time codegen (requires serde)
codegen = ["serde", "dep:serde_json"]
# Build-time codegen for benchmarks
codegen-bench = ["codegen"]

[dependencies]
rhizome-resin-core = { path = "../resin-core" }
serde = { workspace = true, optional = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true

# JIT compilation (optional)
cranelift = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "effects"
harness = false
