[package]
name = "rhizome-resin-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio synthesis for resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]
# Graph pattern matching and optimization
optimize = []
# Spectral analysis (FFT, STFT, time-stretch, pitch-shift)
spectral = ["dep:rhizome-resin-spectral"]
# Experimental: JIT compilation for audio graphs
cranelift = ["dep:cranelift", "dep:cranelift-frontend", "dep:cranelift-native", "dep:cranelift-module", "dep:cranelift-jit", "dep:rhizome-resin-jit", "rhizome-resin-jit/cranelift"]
# Build-time codegen (requires serde)
codegen = ["dep:rhizome-resin-audio-codegen", "serde", "dep:serde_json"]
# Build-time codegen for benchmarks
codegen-bench = ["codegen"]

[dependencies]
rhizome-resin-core = { path = "../resin-core" }
rhizome-resin-expr-field = { path = "../resin-expr-field" }
rhizome-resin-spectral = { path = "../resin-spectral", optional = true }
serde = { workspace = true, optional = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
rhizome-resin-audio-codegen = { path = "../resin-audio-codegen", optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true

# JIT compilation (optional)
cranelift = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
rhizome-resin-jit = { workspace = true, optional = true }

[build-dependencies]
rhizome-resin-audio-codegen = { path = "../resin-audio-codegen" }

[dev-dependencies]
criterion.workspace = true
rustfft.workspace = true

[[bench]]
name = "effects"
harness = false
