[package]
name = "rhizome-resin-automata"
version = "0.1.0"
edition = "2024"
description = "Cellular automata (1D elementary, 2D Game of Life, etc.)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
