[package]
name = "resin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for resin"

[dependencies]
glam.workspace = true
thiserror.workspace = true
image.workspace = true
resin-macros = { path = "../resin-macros" }
resin-expr = { path = "../resin-expr" }
resin-color = { path = "../resin-color" }
resin-noise = { path = "../resin-noise" }
resin-field = { path = "../resin-field" }
