[package]
name = "rhizome-resin-crossdomain"
version = "0.1.0"
edition = "2024"
description = "Cross-domain data interpretation and conversion utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam = { workspace = true }
rhizome-resin-audio = { path = "../resin-audio" }
rhizome-resin-image = { path = "../resin-image" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-color = { path = "../resin-color" }
