[package]
name = "rhizome-resin-expr-field"
version = "0.1.0"
edition = "2024"
description = "Bridge between expressions and fields"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true
rhizome-resin-expr = { path = "../resin-expr" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-noise = { path = "../resin-noise" }

[dev-dependencies]
rhizome-resin-expr-std = { path = "../resin-expr-std" }
