[package]
name = "rhizome-resin-expr-field"
version = "0.1.0"
edition = "2024"
description = "Bridge between expressions and fields"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true
rhizome-dew-core = { git = "https://github.com/rhizome-lab/dew" }
rhizome-dew-scalar = { git = "https://github.com/rhizome-lab/dew" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-noise = { path = "../resin-noise" }
