[package]
name = "rhizome-resin-fluid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fluid simulation for resin"

[features]
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam = { workspace = true }
rand = { workspace = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
