[package]
name = "rhizome-resin-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU compute backend for resin fields"

[features]
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]
image-expr = ["dep:rhizome-resin-image", "dep:rhizome-dew-linalg"]

[dependencies]
glam = { workspace = true }
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
thiserror = { workspace = true }
rhizome-resin-core = { workspace = true }
rhizome-resin-backend = { workspace = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
rhizome-resin-image = { path = "../resin-image", features = ["wgsl"], optional = true }
rhizome-dew-linalg = { git = "https://github.com/rhizome-lab/dew", features = ["4d", "wgsl"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
image = "0.25"
