[package]
name = "rhizome-resin-image"
version = "0.1.0"
edition = "2024"
description = "Image-based fields for texture sampling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
image.workspace = true
rhizome-resin-color = { path = "../resin-color" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
