[package]
name = "rhizome-resin-image"
version = "0.1.0"
edition = "2024"
description = "Image-based fields for texture sampling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]
dew = ["dep:rhizome-dew-core", "dep:rhizome-dew-linalg", "dep:num-traits"]
cranelift = ["dew", "rhizome-dew-linalg/cranelift"]
wgsl = ["dew", "rhizome-dew-linalg/wgsl"]

[dependencies]
glam.workspace = true
image.workspace = true
rhizome-resin-color = { path = "../resin-color" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-op = { path = "../resin-op", optional = true }
rhizome-dew-core = { git = "https://github.com/rhizome-lab/dew", features = ["cond"], optional = true }
rhizome-dew-linalg = { git = "https://github.com/rhizome-lab/dew", features = ["4d"], optional = true }
num-traits = { version = "0.2", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
