[package]
name = "rhizome-resin-lsystem"
version = "0.1.0"
edition = "2024"
description = "L-systems for procedural generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
serde = { workspace = true, optional = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde_json = { version = "1", optional = true }
