[package]
name = "rhizome-resin-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "3D mesh generation for resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
ordered-float.workspace = true
rhizome-resin-core = { path = "../resin-core" }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "mesh_benches"
harness = false
