[package]
name = "rhizome-resin-motion-fn"
version = "0.1.0"
edition = "2024"
description = "Motion functions for animation (spring, oscillate, wiggle)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dew = ["dep:rhizome-dew-scalar"]

[dependencies]
glam.workspace = true
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-easing = { path = "../resin-easing" }
rhizome-resin-noise = { path = "../resin-noise" }
serde = { workspace = true, optional = true }
rhizome-dew-scalar = { git = "https://github.com/rhizome-lab/dew", optional = true }
