[package]
name = "rhizome-resin-motion"
version = "0.1.0"
edition = "2024"
description = "2D motion graphics scene graph with transforms, layers, and hierarchy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde", "glam/serde", "rhizome-resin-color/serde"]

[dependencies]
glam.workspace = true
rhizome-resin-color = { path = "../resin-color" }
rhizome-resin-easing = { path = "../resin-easing" }
rhizome-resin-motion-fn = { path = "../resin-motion-fn" }
rhizome-resin-noise = { path = "../resin-noise" }
rhizome-resin-transform = { path = "../resin-transform" }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
