[package]
name = "rhizome-resin-noise"
version = "0.1.0"
edition = "2024"
description = "Noise functions (Perlin, Simplex, FBM)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "noise_benches"
harness = false
