[package]
name = "rhizome-resin-op"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dynamic operation infrastructure for resin pipelines"

[dependencies]
rhizome-resin-op-macros = { path = "../resin-op-macros" }
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
