[package]
name = "rhizome-resin-particle"
version = "0.1.0"
edition = "2024"
description = "Particle systems with forces and emitters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true
rhizome-resin-noise = { path = "../resin-noise" }
