[package]
name = "rhizome-resin-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rigid body physics simulation for resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam = { workspace = true }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
