[package]
name = "rhizome-resin-pointcloud"
version = "0.1.0"
edition = "2024"
description = "Point cloud operations: sampling, filtering, normals, reconstruction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
rand.workspace = true
rhizome-resin-geometry = { path = "../resin-geometry" }
rhizome-resin-mesh = { path = "../resin-mesh" }
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pointcloud_benches"
harness = false
