[package]
name = "rhizome-resin-scatter"
version = "0.1.0"
edition = "2024"
description = "Point scattering and instancing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
