[package]
name = "rhizome-resin-spatial"
version = "0.1.0"
edition = "2024"
description = "Spatial data structures for efficient queries and collision detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
# Serialization support
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "spatial_benches"
harness = false
