[package]
name = "rhizome-resin-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2D vector graphics for resin"

[dependencies]
glam.workspace = true
rhizome-resin-core = { path = "../resin-core" }
rhizome-resin-color = { path = "../resin-color" }
ab_glyph = "0.2"
