[package]
name = "rhizome-resin-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2D vector graphics for resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
rhizome-resin-core = { path = "../resin-core" }
rhizome-resin-color = { path = "../resin-color" }
rhizome-resin-curve = { path = "../resin-curve" }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
ab_glyph = "0.2"
