[package]
name = "rhizome-resin-voxel"
version = "0.1.0"
edition = "2024"
description = "Voxel grids, SDF conversion, sparse storage, and editing operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhizome-resin-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
rhizome-resin-field = { path = "../resin-field" }
rhizome-resin-mesh = { path = "../resin-mesh" }
rhizome-resin-op = { path = "../resin-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
